kube/common/pdla/pdla-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdla
  labels:
    app.kubernetes.io/name: pdla
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdla
  template:
    metadata:
    
      labels:
        app.kubernetes.io/name: pdla
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - pdla
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: pdla
        image: luminainc/pdla:8c4bfb6d
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-k", "uvicorn.workers.UvicornWorker", "--chdir", "./src", "app:app", "--bind", "0.0.0.0:8000", "--timeout", "10000"]
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
