kube/common/pdla/pdla-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdla-ingress
  namespace: chunkmydocs
  labels:
    app: pdla
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pdla-service
            port:
              number: 8000
